# yavuz

./: Cargo.toml  marks.db  marks.db-shm  marks.db-wal
backend/: Cargo.toml  marks.db
backend/migrations/: 20230109172616_mark.sql
backend/src/: controllers.rs  main.rs
backend/src/controllers/: mark.rs  uav.rs
backend/src/models/: uav.rs
frontend/: package-lock.json  package.json
frontend/src/routes/: +page.svelte  SS.JSON
frontend/static/: boat.gltf  kizilelma_buyuk.stl  style.css  yavuz.gltf
src/: main.rs
src/controllers/: mark.rs
src/models/: mark.rs
